--- a/index.html
+++ b/index.html
@@ -21,7 +21,47 @@
   </head>
   <body>
 
-    
+    <nav class="nav navbar-fixed-top navbar-inverse navbar-transparente">
+      <div class="container">
+        <!--Header-->
+        <div class="navbar-header">
+
+           <!--Botão para menu de cel-->
+          <button type="button" class="navbar-toggle collapsed"
+                  data-toggle="collapse" data-target="#barra-navegacao">
+            <span class="sr-only">Alternar navegação</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!--Botão para menu de cel-->
+
+          <a href="index.html" class="navbar-brand">
+             <span class="img-logo">Spotify</span>
+          </a>
+
+        </div>
+        <!--Menu adequado para cel também-->
+        <div class="collapse navbar-collapse" id="barra-navegacao">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Premium</a></li>
+            <li><a href="#">Ajuda</a></li>
+            <li><a href="#">Baixar</a></li>
+            <li class="divisor" role="separador"></li>
+            <li><a href="#">Inscrever-se</a></li>
+            <li><a href="#">Entrar</a></li>
+          </ul>
+        </div>
+      </div> <!--container-->
+    </nav> <!--nav-->
+
+    <div class="capa">
+      <div class="texto-capa">
+        <h1>Música para todos</h1>
+        <a href="" class="btn btn-custom btn-roxa btn-lg">Aproveite o Spotify Free</a>
+        <a href="" class="btn btn-custom btn-branco btn-lg">Obter o Spotify Premium</a>
+      </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
